--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="public/styles.css">
-<!--    <link rel="stylesheet" href="styles.css">-->
+<!--    <link rel="stylesheet" href="public/styles.css">-->
+    <link rel="stylesheet" href="styles.css">
     <title>Моё резюме</title>
 </head>
 <body>
     <div id="main"></div>
-    <script src="public/bundle.js"></script>
-<!--    <script src="bundle.js"></script>-->
+<!--    <script src="public/bundle.js"></script>-->
+    <script src="bundle.js"></script>
 </body>
 </html>
