--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
 <!--    <link rel="stylesheet" href="public/styles.css">-->
     <link rel="stylesheet" href="styles.css">
     <title>Моё резюме</title>
